2011-09-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* configure.in,
	  configure: create device/lib/z180/Makefile during configuration

2011-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Handle the trivial casts more like assignments, allow hl in operands for unary minus.

2011-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* ChangeLog:
	  Reconstruct ChangeLog entries lost during the z180 branch merge.

2011-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Always use native multiplication for Z80 and Z180 when the result is 8 bits.

2011-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Always use of Z180 mlt instruction for unsigned 8x8 multiplication,
	  fixed bug in register-to-register cast.

2011-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Handle Z180 mlt instruction in peephole optimizer.

2011-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* Merged z180 branch.

2011-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c: accept int modifiers

2011-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/globals.cc,
	  sim/ucsim/z80.src/inst_ed.cc:
	  Report mlt instructions as invalid in simulator when running in Z80 mode.

2011-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  sim/ucsim/z80.src/inst_ed.cc:
	  Enable use of Z180 multiplication instructions.

2011-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug1115321.c:
	  Fix last remaining ucz180 regression test failure.

2011-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/include/sdcc-lib.h,
	  device/include/math.h,
	  device/include/stdarg.h,
	  device/lib/_malloc.c,
	  device/lib/_realloc.c,
	  device/lib/_free.c,
	  device/lib/Makefile.in,
	  sim/ucsim/z80.src/z80cl.h,
	  sim/ucsim/z80.src/z80.cc,
	  sim/ucsim/z80.src/simz80.cc,