@@ -231,6 +231,7 @@
 #define W_DUPLICATE_INIT              203 /* duplicate initializer */
 #define E_INVALID_UNIVERSAL           204 /* incomplete universal character name %s. */
 #define W_UNIVERSAL_C99               205 /* universal character names are only valid in C99 */
+#define E_SHORTLONG                   206 /* Invalid combination of short / long */
 
 #define MAX_ERROR_WARNING             256 /* size of disable warnings array */
 
